--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,203 +1,242 @@
 ---
-title: "Reproducible Research Project 1"
-author: "Michael Galarnyk"
-date: "3/26/2017"
+title: "Reproducible Research: Peer Assessment 1"
+output: 
+  html_document:
+    keep_md: true
 ---
+## Introduction
 
-github repo for rest of specialization: [Data Science Coursera](https://github.com/mGalarnyk/datasciencecoursera)
+This is an R Markdown document, created for the Coursera course "Reproducible Research", in completion of "Peer Assessment 1". The assignment requires students to write an R markdown document evidencing literate programming, using markdown and R programming techniques. There are 5 primary questions to be answered, dealing with processing and analysing data. The data provided to be worked upon, is called "activity monitoring data".
 
-Introduction
-------------
+### The Data
 
-It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up. These type of devices are part of the “quantified self” movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data.
+The data provided for use, is derived from a study whereupon a single individual wore a "personal activity monitoring device". The study says that:
 
-This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
+> "[Activity monitoring devices] are part of the “quantified self” movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data."
 
-The data for this assignment can be downloaded from the course web site:
+The device used in this particular data set collects data on the number of steps taken by an individual, in 5 minute intervals. Two months of data, October/November 2012 are included within the data set. The variables measured include steps (the number of steps taken), date (the day on which the steps measurement was taken) and interval, (the interval in which the steps measurement was taken.) The data is stored in csv format, with 17,598 observations and the aforementioned 3 variables recorded.
 
--   Dataset: [Activity monitoring data](https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip)
+## Completing the Assignment
 
-The variables included in this dataset are:
+### Question 1: Loading and preprocessing the data
 
-steps: Number of steps taking in a 5-minute interval (missing values are coded as 𝙽𝙰) </br> date: The date on which the measurement was taken in YYYY-MM-DD format </br> interval: Identifier for the 5-minute interval in which measurement was taken </br> The dataset is stored in a comma-separated-value (CSV) file and there are a total of 17,568 observations in this dataset.
+The data must be in the user's current working directory for the code to run correctly. The unzip function extracts the data from the zip file, before it is read into R. The object classes contained within each of the variables are defined, so as to speed up the reading process.
 
-Loading and preprocessing the data
-----------------------------------
-
-Unzip data to obtain a csv file.
-
-``` r
-library("data.table")
-library(ggplot2)
-
-fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
-download.file(fileUrl, destfile = paste0(getwd(), '/repdata%2Fdata%2Factivity.zip'), method = "curl")
-unzip("repdata%2Fdata%2Factivity.zip",exdir = "data")
+```{r} 
+unzip("activity.zip")
+initialData <- read.csv("activity.csv", colClasses=c("numeric", "Date", "numeric"))
 ```
 
-Reading csv Data into Data.Table.
----------------------------------
+An initial look at the data confirms its dimensions and contents.
 
-``` r
-activityDT <- data.table::fread(input = "data/activity.csv")
+```{r} 
+head(initialData)
+str(initialData)
 ```
 
-What is mean total number of steps taken per day?
--------------------------------------------------
+### Question 2: What is mean total number of steps taken per day?
 
-1.  Calculate the total number of steps taken per day
+The question states any missing values in the data set can be ignored. From using the summary functions previously, it is already known that there are NA values within the steps variable, so these can be removed now.
 
-``` r
-Total_Steps <- activityDT[, c(lapply(.SD, sum, na.rm = FALSE)), .SDcols = c("steps"), by = .(date)] 
-
-head(Total_Steps, 10)
+```{r}
+data <- initialData[!(is.na(initialData$steps)), ]
 ```
 
-    ##           date steps
-    ##  1: 2012-10-01    NA
-    ##  2: 2012-10-02   126
-    ##  3: 2012-10-03 11352
-    ##  4: 2012-10-04 12116
-    ##  5: 2012-10-05 13294
-    ##  6: 2012-10-06 15420
-    ##  7: 2012-10-07 11015
-    ##  8: 2012-10-08    NA
-    ##  9: 2012-10-09 12811
-    ## 10: 2012-10-10  9900
+To calculate the total number of steps taken per day, the data first needs to be grouped separately for each day, and then the sum of each group calculated. The aggregate function can complete both of these steps, and format the output in a tidy data frame.
 
-1.  If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day.
-
-``` r
-ggplot(Total_Steps, aes(x = steps)) +
-    geom_histogram(fill = "blue", binwidth = 1000) +
-    labs(title = "Daily Steps", x = "Steps", y = "Frequency")
+```{r}
+totalStepsDay <- aggregate(steps ~ date, data, sum)
+head(totalStepsDay)
 ```
 
-    ## Warning: Removed 8 rows containing non-finite values (stat_bin).
+Creating exploratory plots are useful to be able to quickly see a view of all of the data, and pick out any potential patterns. Here, a histogram is created to indicate the frequency of total steps taken each day.
 
-![](https://github.com/mGalarnyk/datasciencecoursera/blob/master/5_Reproducible_Research/project1/%F0%9D%99%BF%F0%9D%99%B0%F0%9D%9F%B7_%F0%9D%9A%9D%F0%9D%9A%8E%F0%9D%9A%96%F0%9D%9A%99%F0%9D%9A%95%F0%9D%9A%8A%F0%9D%9A%9D%F0%9D%9A%8E_files/figure-markdown_github/unnamed-chunk-4-1.png)
 
-1.  Calculate and report the mean and median of the total number of steps taken per day
-
-``` r
-Total_Steps[, .(Mean_Steps = mean(steps, na.rm = TRUE), Median_Steps = median(steps, na.rm = TRUE))]
+```{r}
+paletteBlue <- colorRampPalette(c("skyblue", "darkblue", "skyblue"))
+hist(totalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
+     main="Histogram of the Total Number of Steps Taken per Day",
+     col=paletteBlue(22), family="serif")
 ```
 
-    ##    Mean_Steps Median_Steps
-    ## 1:   10766.19        10765
+Finally, the summarise function can calculate the mean and median values of the total number of steps taken per day.
 
-What is the average daily activity pattern?
--------------------------------------------
-
-1.  Make a time series plot (i.e. 𝚝𝚢𝚙𝚎 = "𝚕") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
-
-``` r
-IntervalDT <- activityDT[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval)] 
-
-ggplot(IntervalDT, aes(x = interval , y = steps)) + geom_line(color="blue", size=1) + labs(title = "Avg. Daily Steps", x = "Interval", y = "Avg. Steps per day")
+```{r, message=FALSE}
+library(dplyr)
+totalStepsSummary <- summarise(totalStepsDay, meanOfTotalSteps=mean(totalStepsDay$steps),
+                               medianOfTotalSteps=median(totalStepsDay$steps))
+print(totalStepsSummary)
 ```
 
-![](https://github.com/mGalarnyk/datasciencecoursera/blob/master/5_Reproducible_Research/project1/%F0%9D%99%BF%F0%9D%99%B0%F0%9D%9F%B7_%F0%9D%9A%9D%F0%9D%9A%8E%F0%9D%9A%96%F0%9D%9A%99%F0%9D%9A%95%F0%9D%9A%8A%F0%9D%9A%9D%F0%9D%9A%8E_files/figure-markdown_github/unnamed-chunk-6-1.png)
+Therefore the mean value calculated is **10766.19**, and the median value **10765**.
 
-1.  Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+### Question 3: What is the average daily activity pattern?
 
-``` r
-IntervalDT[steps == max(steps), .(max_interval = interval)]
+To look at the average daily pattern, we can use another exploratory graph, this time a time series plot. As this plot should look at the average number of steps taken for each interval, (utilising all days), the aggregate function must be used again, to split the data into groups for each interval, and then averaged with the mean function.
+
+```{r}
+meanStepsInterval <- aggregate(steps ~ interval, data, mean)
+head(meanStepsInterval)
 ```
 
-    ##    max_interval
-    ## 1:          835
+The base R plotting system is used to create a time series plot, with each interval on the x axis, and the average steps data on the y axis.
 
-Imputing missing values
------------------------
-
-1.  Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with 𝙽𝙰s)
-
-``` r
-activityDT[is.na(steps), .N ]
+```{r}
+plot(x=meanStepsInterval$interval, y=meanStepsInterval$steps, type="l",
+     main="Time Series Plot of Average Steps Taken per Interval",
+     ylab="Number of Steps", xlab="Intervals (in 5 mins)",
+     col="darkblue", lwd=1.5, family="serif")
 ```
 
-    ## [1] 2304
+The last part of this question asks "which five minute interval contains the maximum number of steps?" To answer this the max function can be used, which prints out the maximum value from a numeric vector.
 
-``` r
-# alternative solution
-nrow(activityDT[is.na(steps),])
+```{r}
+meanStepsInterval[grep(max(meanStepsInterval$steps), meanStepsInterval$steps), ]
 ```
 
-    ## [1] 2304
+So the interval with the maximum number of steps is interval **835**.
 
-1.  Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+### Question 4: Imputing missing values
 
-``` r
-# Filling in missing values with median of dataset. 
-activityDT[is.na(steps), "steps"] <- activityDT[, c(lapply(.SD, median, na.rm = TRUE)), .SDcols = c("steps")]
+As the data can be confirmed to contain some NA values as some of the observations:
+
+```{r}
+anyNA(initialData)
 ```
 
-1.  Create a new dataset that is equal to the original dataset but with the missing data filled in.
+It is necessary to find out whether the NA values are more-so clustered to one area within the data. Looking at each of the variables:
 
-``` r
-data.table::fwrite(x = activityDT, file = "data/tidyData.csv", quote = FALSE)
+```{r}
+data.frame(steps=sum(is.na(initialData$steps)), 
+           interval=sum(is.na(initialData$interval)), 
+           date=sum(is.na(initialData$date)))
 ```
 
-1.  Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+It can be seen that all 2304 NA values are contained within the steps variable.
 
-``` r
-# total number of steps taken per day
-Total_Steps <- activityDT[, c(lapply(.SD, sum)), .SDcols = c("steps"), by = .(date)] 
+Therefore an imputing strategy must be devised to replace all of these missing values with usable numeric measurements. To do so, I decided to replace each missing value with the mean value for the same interval, averaged across all days.
 
-# mean and median total number of steps taken per day
-Total_Steps[, .(Mean_Steps = mean(steps), Median_Steps = median(steps))]
+I used a for loop to achieve this, first testing if each observation was an NA value, and if so, replacing it with the mean average for that interval, (as calculated in a previous question).
+
+```{r}
+imputedData <- initialData
+for(x in 1:17568) {
+    if(is.na(imputedData[x, 1])==TRUE) {
+        imputedData[x, 1] <- meanStepsInterval[meanStepsInterval$interval %in% imputedData[x, 3], 2]
+    }
+}
+head(imputedData)
 ```
 
-    ##    Mean_Steps Median_Steps
-    ## 1:    9354.23        10395
+Now that the NA values have been replaced, a histogram from the imputed data can be created. This histogram should indicate the frequency of the total number of steps taken per day. Therefore again, the data must be grouped and "summed" by day.
 
-``` r
-ggplot(Total_Steps, aes(x = steps)) + geom_histogram(fill = "blue", binwidth = 1000) + labs(title = "Daily Steps", x = "Steps", y = "Frequency")
+```{r}
+imputedTotalStepsDay <- aggregate(steps ~ date, imputedData, sum)
+head(imputedTotalStepsDay)
 ```
 
-![](https://github.com/mGalarnyk/datasciencecoursera/blob/master/5_Reproducible_Research/project1/%F0%9D%99%BF%F0%9D%99%B0%F0%9D%9F%B7_%F0%9D%9A%9D%F0%9D%9A%8E%F0%9D%9A%96%F0%9D%9A%99%F0%9D%9A%95%F0%9D%9A%8A%F0%9D%9A%9D%F0%9D%9A%8E_files/figure-markdown_github/unnamed-chunk-11-1.png)
+Creating the histogram:
 
-| Type of Estimate                       | Mean\_Steps | Median\_Steps |
-|----------------------------------------|-------------|---------------|
-| First Part (with na)                   | 10765       | 10765         |
-| Second Part (fillin in na with median) | 9354.23     | 10395         |
-
-Are there differences in activity patterns between weekdays and weekends?
--------------------------------------------------------------------------
-
-1.  Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
-
-``` r
-# Just recreating activityDT from scratch then making the new factor variable. (No need to, just want to be clear on what the entire process is.) 
-activityDT <- data.table::fread(input = "data/activity.csv")
-activityDT[, date := as.POSIXct(date, format = "%Y-%m-%d")]
-activityDT[, `Day of Week`:= weekdays(x = date)]
-activityDT[grepl(pattern = "Monday|Tuesday|Wednesday|Thursday|Friday", x = `Day of Week`), "weekday or weekend"] <- "weekday"
-activityDT[grepl(pattern = "Saturday|Sunday", x = `Day of Week`), "weekday or weekend"] <- "weekend"
-activityDT[, `weekday or weekend` := as.factor(`weekday or weekend`)]
-head(activityDT, 10)
+```{r}
+paletteRed <- colorRampPalette(c("deeppink", "darkred", "deeppink"))
+hist(imputedTotalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
+     main="Histogram of Total Number of Steps Taken per Day (With Imputed Values)",
+     col=paletteRed(22), family="serif")
 ```
 
-    ##     steps       date interval Day of Week weekday or weekend
-    ##  1:    NA 2012-10-01        0      Monday            weekday
-    ##  2:    NA 2012-10-01        5      Monday            weekday
-    ##  3:    NA 2012-10-01       10      Monday            weekday
-    ##  4:    NA 2012-10-01       15      Monday            weekday
-    ##  5:    NA 2012-10-01       20      Monday            weekday
-    ##  6:    NA 2012-10-01       25      Monday            weekday
-    ##  7:    NA 2012-10-01       30      Monday            weekday
-    ##  8:    NA 2012-10-01       35      Monday            weekday
-    ##  9:    NA 2012-10-01       40      Monday            weekday
-    ## 10:    NA 2012-10-01       45      Monday            weekday
+The question then asks for calculation of the mean and median total number of steps taken per day, which can be calculated using the summarise function.
 
-1.  Make a panel plot containing a time series plot (i.e. 𝚝𝚢𝚙𝚎 = "𝚕") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
-
-``` r
-activityDT[is.na(steps), "steps"] <- activityDT[, c(lapply(.SD, median, na.rm = TRUE)), .SDcols = c("steps")]
-IntervalDT <- activityDT[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval, `weekday or weekend`)] 
-
-ggplot(IntervalDT , aes(x = interval , y = steps, color=`weekday or weekend`)) + geom_line() + labs(title = "Avg. Daily Steps by Weektype", x = "Interval", y = "No. of Steps") + facet_wrap(~`weekday or weekend` , ncol = 1, nrow=2)
+```{r}
+imputedStepsSummary <- summarise(imputedTotalStepsDay, 
+                                 meanOfTotalSteps=mean(imputedTotalStepsDay$steps), 
+                                 medianOfTotalSteps=median(imputedTotalStepsDay$steps))  
+print(imputedStepsSummary)
 ```
 
-![](https://github.com/mGalarnyk/datasciencecoursera/blob/master/5_Reproducible_Research/project1/%F0%9D%99%BF%F0%9D%99%B0%F0%9D%9F%B7_%F0%9D%9A%9D%F0%9D%9A%8E%F0%9D%9A%96%F0%9D%9A%99%F0%9D%9A%95%F0%9D%9A%8A%F0%9D%9A%9D%F0%9D%9A%8E_files/figure-markdown_github/unnamed-chunk-13-1.png)
+This a similar calculation to the one completed at the start of the assignment, (without the imputed values,) and thus they can be compared.
+
+```{r}
+rbind(totalStepsSummary, imputedTotalStepsSummary)
+```
+
+The values of the two data sets are very similar, if not exactly the same, due to the use of averaging functions when imputing the NA measurements. The mean values are the same, at **10766.19** steps, while the median value is slightly larger for the imputed data set, at **10766.19** steps, rather than **10765** steps.
+
+If histograms of the two data sets (imputed and non-imputed) are compared:
+
+```{r}
+par(mfrow = c(1, 2))
+
+hist(totalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
+     col=paletteBlue(22), family="serif", ylim=c(0, 20), main=NULL)
+hist(imputedTotalStepsDay$steps, breaks=20, xlab="Number of Steps Taken", 
+     col=paletteRed(22), family="serif", ylim=c(0, 20), main=NULL)
+mtext("Histograms of Total Number of Steps Taken per Day, Without/With Imputed Values",
+      adj=0.95, family="serif", font=2)
+```
+
+It can be seen that the frequency of values increases in the second histogram, which is expected, due to the imputed values. 
+
+More explanations for the differences between the non and imputed data sets can be seen by looking at the NA values grouped by their date variable.
+
+```{r}
+naByDate <- initialData[is.na(initialData$steps), ]
+table(naByDate$date)
+```
+
+As there are exactly 288 intervals measured for each day:
+
+```{r}
+length(unique(data$interval))
+```
+
+It is therefore shown by the above table, that in the initial data set, missing observations are due to entirely missed days, (8 of the days) where no measurements were made whatsoever. This therefore reinforces that the imputing technique used, of utilising average interval data, was likely more useful than potentially using average daily data.
+
+### Question 5: Are there differences in activity patterns between weekdays and weekends?
+
+The question indicates that the imputed data set should be used to answer this problem.  
+To help in answering this question, firstly a new factor variable should be created within the data frame. This should indicate whether each day is a "weekday" or a "weekend".
+
+To achieve this, I used the weekdays function to automatically calculate the day of the week each day resided upon, (Monday, Tuesday, etc.) Next, I wrote a for loop, which would assign the factor value "weekend" to all rows it read as having the values "Saturday" or "Sunday", and assign "weekday" to the others.
+
+```{r}
+daysData <- imputedData
+daysData$days <- weekdays(daysData$date)
+daysData$weekday <- as.character(rep(0, times=17568))
+for(x in 1:17568) {
+    if(daysData[x, 4] %in% c("Saturday", "Sunday")) {
+        daysData[x, 5] <- "weekend"
+    } else {
+        daysData[x, 5] <- "weekday"
+    }
+}
+daysData$weekday <- factor(daysData$weekday)
+head(daysData)
+```
+
+To compare the weekday and weekend data, and create two plots of the average number of steps taken per interval, the data has to be split into two groups of weekday/weekend data, using the newly created variable.
+
+```{r}
+weekdayData <- daysData[daysData$weekday=="weekday", ]
+weekendData <- daysData[daysData$weekday=="weekend", ]
+```
+
+Next, the average number of steps per interval is calculated, much like it has been done in previous questions.
+
+```{r}
+weekdayMean <- aggregate(steps ~ interval, weekdayData, mean)
+weekendMean <- aggregate(steps ~ interval, weekendData, mean)
+```
+
+Finally the panel plot is created. The x axis indicates each 5 minute interval, and the y axis shows the average number of steps taken. The two plots are divided into weekday, and weekend data.
+
+```{r}
+par(mfrow=c(2, 1), mar=c(4, 4.1, 3, 2.1))
+plot(weekdayMean$interval, weekdayMean$steps, type="l",
+     main="Time Series Plot of Average Steps Taken per Interval, for Weekdays",
+     xlab="Intervals (in 5 mins)", ylab="Number of Steps", family="serif",
+     col="darkred", lwd=1.5, ylim=c(0, 230))
+plot(weekendMean$interval, weekendMean$steps, type="l",
+     main="Time Series Plot of Average Steps Taken per Interval, for Weekends",
+     xlab="Intervals (in 5 mins)", ylab="Number of Steps", family="serif",
+     col="darkblue", lwd=1.5, ylim=c(0, 230))
+```
